fix(url-processing): adding endpoint url processing
